<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright 2011 Franco Sabadini

	Licensed under the Apache License, Version 2.0 (the "License");
   	you may not use this file except in compliance with the License.
   	You may obtain a copy of the License at

    	http://www.apache.org/licenses/LICENSE-2.0

   	Unless required by applicable law or agreed to in writing, software
   	distributed under the License is distributed on an "AS IS" BASIS,
   	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   	See the License for the specific language governing permissions and
   	limitations under the License.
-->
<resources>
    <!-- Main layout -->
    <string name="app_name">Save My Apps</string>
    <string name="preferences_label">Settings</string>
    <string name="save_apps_button">Save Apps</string>
	<string name="unsave_apps_button">Remove Apps</string>
	<string name="select_all">Select All</string>
	
	<!-- Sync dialogs and toasts -->
	<string name="account_dialog_title">Select a Google account</string>
	<string name="con_error_dialog_title">Connection Error</string>
	<string name="positive_button">OK</string>
    <string name="con_error_message">
        No Internet connection. Please check your connection and try again.
    </string>
	<string name="loading_list_title">
	    Loading Apps List...This could take a while, please be patient.
	</string>
	<string name="sync_start_message">The synchronization has started...</string>
	<string name="sync_end_message">The synchronization finished...</string>
	
	<!-- Options menu -->
	<string name="help">Help</string>
	<string name="refresh">Refresh</string>
	<string name="share">Share</string>
	<string name="sort">Sort</string>
	<string name="settings">Settings</string>
	<string name="exit">Exit</string>
	
	<!-- Help dialog -->
	<string name="help_dialog_title">How to use this app</string>
	<string name="help_dialog_text_1">
	    * First you must choose a Google account to which synchronize your applications 
	    information (The apps info will be saved in a new task list called 
	    \"SaveMyAppsDefaultList\" in your account, you can later access this list on 
	    your browser from your GMail account).\n\n
	    * How to save/delete apps:\n\n
	    1- Choose an app (or a group of them) by checking or un-checking the 
	    checkboxes on the right side.\n\n
	    2- Press the corresponding button (located on the top) to the action you 
	    want to perform on the chosen apps (\"Save Apps\" or \"Remove Apps\").\n\n
		* References:
	</string>
	<string name="help_dialog_text_2">
	    \nIndicates that the information of the app listed next to it is already 
	    saved in your Google account. 
	</string>
	<string name="help_dialog_text_3">
	    \nIndicates that the information of the app listed next to it is NOT 
	    saved in your Google account. 
	</string>
	<string name="help_dialog_text_4">
	    \n* Extra functionality:\n\n
		1- Want to refresh the apps list? Sure, just go to the options menu and press 
		the \"Refresh\" button.\n\n 
		2- Want to share one or more apps with your friends? No problem, just choose 
		them (by checking the checkboxes on the right side), then go to the options 
		menu and press the \"Share\" button, after that choose the app you want to use 
		to share the information (Messaging, GMail, etc.) and use it.\n\n 
	    * What will come:\n\n
	    \tI have several new features in mind that I\'ll be adding to the 
	    app as soon as I have the time to work on them so stay tuned :-).\n\n
	    * Feedback:\n\n
	    \tIf you have any suggestions, complaints or whatever about the app you 
	    can contact me by email at cool.apps.android@gmail.com
	</string>
	
	<!-- Share dialog -->	
	<string name="share_dialog_title">Share using...</string>
	<string name="share_subject">List of Android applications</string>
	<string name="share_body_app_name">Name:</string>
	<string name="share_body_app_pckname">Package Name:</string>
	
	<!-- Sort dialog -->	
	<string name="sort_dialog_title">Sort by...</string>
	<string-array name="sort_dialog_list">
	    <item>App Name</item>
	    <item>Not Saved First</item>
	    <item>Saved First</item>
	</string-array>
	
	<!-- Pro version update dialog -->
	<string name="pro_update_dlg_title">Upgrade to PRO version</string>
	<string name="pro_update_dlg_msg">
	    Upgrade to PRO version NOW and get more great features and no ads :-).
	    \n\n- Install and uninstall several apps with only 2 clicks. 
	    \n- Share installation links with your friends via facebook, text, email, 
	    etc.\n\n
	    You won\'t find an easiest and fastest way to manage your apps between 
	    your devices...
	</string>
	<string name="pro_update_dlg_pos_button">Upgrade NOW</string>
	<string name="pro_update_dlg_neg_button">Remind Me Later</string>
	<string name="pro_update_dlg_neutral_button">Never Show Again</string>
	<string name="pro_version_url">market://details?id=com.cooldroidapps.savemyappspro</string>
	
	<!-- Settings layout -->
	<string name="share_pref_title">Share Settings</string>
	<string name="share_pref_labels_key">share_labels</string>
	<string name="share_pref_labels_title">Use Labels</string>
	<string name="share_pref_labels_sum">
	    Add labels to the shared information (\"Name:\", \"Package Name:\", etc.)
	</string>
	<string name="share_pref_app_name_key">share_app_name</string>
	<string name="share_pref_app_name_title">Share App Name</string>
	<string name="share_pref_app_pckname_key">share_app_pckname</string>
	<string name="share_pref_app_pckname_title">Share App Package Name</string>
	<string name="share_pref_app_link_key">share_app_link</string>
	<string name="pro_update_pref_title">Pro Version Settings</string>	
	<string name="pro_update_pref_button">Install PRO Version NOW</string>	
	<string name="pro_update_pref_button_key">pro_update_pref_button_key</string>	
			
	<string name="accounts_pref_title">Account Settings</string>	
</resources>
