<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright 2011 Franco Sabadini - fsabadi@gmail.com

	Licensed under the Apache License, Version 2.0 (the "License");
   	you may not use this file except in compliance with the License.
   	You may obtain a copy of the License at

    	http://www.apache.org/licenses/LICENSE-2.0

   	Unless required by applicable law or agreed to in writing, software
   	distributed under the License is distributed on an "AS IS" BASIS,
   	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   	See the License for the specific language governing permissions and
   	limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        		  android:key="first_preferencescreen" >
	<PreferenceCategory 
	    android:title="@string/share_pref_title">
        <CheckBoxPreference 
            android:key="@string/share_pref_labels_key"
            android:title="@string/share_pref_labels_title"
            android:summary="@string/share_pref_labels_sum" 
            android:defaultValue="true"
    	/>
	    <CheckBoxPreference 
		    android:key="@string/share_pref_app_name_key"
            android:title="@string/share_pref_app_name_title"
            android:defaultValue="true"
        />
        <CheckBoxPreference 
            android:key="@string/share_pref_app_pckname_key"
            android:title="@string/share_pref_app_pckname_title"
            android:defaultValue="true"
        />
	</PreferenceCategory>
	<PreferenceCategory 
	    android:title="@string/pro_update_pref_title">
	    <Preference 
	        android:title="@string/pro_update_pref_button"
	        android:key="@string/pro_update_pref_button_key"
	    />
	</PreferenceCategory>
	<!-- PreferenceCategory 
	    android:title="@string/accounts_pref_title">
        
    </PreferenceCategory-->
</PreferenceScreen> 