<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright 2011 Franco Sabadini - fsabadi@gmail.com

	Licensed under the Apache License, Version 2.0 (the "License");
   	you may not use this file except in compliance with the License.
   	You may obtain a copy of the License at

    	http://www.apache.org/licenses/LICENSE-2.0

   	Unless required by applicable law or agreed to in writing, software
   	distributed under the License is distributed on an "AS IS" BASIS,
   	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   	See the License for the specific language governing permissions and
   	limitations under the License.
-->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">    
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content">    
    	<Button 
    		android:text="@string/save_apps_button" 
    		android:textSize="@dimen/button_text_size"
    		android:layout_width="match_parent" 
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:onClick="saveApps"
    	/>
    	<Button 
    		android:text="@string/unsave_apps_button" 
    		android:textSize="@dimen/button_text_size"
    		android:layout_width="match_parent" 
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:onClick="unsaveApps"
    	/>
    </LinearLayout>
    <RelativeLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/select_all"
			android:textSize="@dimen/text_size"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@+id/checkbox"
		/>
		<CheckBox 
			android:id="@+id/checkbox" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginLeft="@dimen/checkbox_left_marg"
			android:layout_marginRight="@dimen/checkbox_right_marg" 
			android:layout_alignParentRight="true"
			android:onClick="updateCkeck"
		/>
	</RelativeLayout>
	<RelativeLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<com.google.ads.AdView 
	        android:id="@+id/ad_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        ads:adUnitId="a14f230a9cc2981"
	        ads:adSize="BANNER"
	        ads:loadAdOnCreate="true">
	    </com.google.ads.AdView>
		<ListView 
		    android:id="@+id/android:list" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textFilterEnabled="true"
			android:choiceMode="multipleChoice"
			android:layout_above="@id/ad_view"
			android:fastScrollEnabled="true"
			android:scrollbarDefaultDelayBeforeFade="1"
		/>
	</RelativeLayout>
</LinearLayout>